regression ensemble, ann and rnn

--- a/models.ipynb
+++ b/models.ipynb
@@ -1097,14 +1097,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: /home/mircea/anaconda3/lib/python3.11/site-packages/cv2/../../../../lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
+      "Collecting torcheval\n",
+      "  Downloading torcheval-0.0.7-py3-none-any.whl.metadata (8.6 kB)\n",
+      "Requirement already satisfied: typing-extensions in /home/mircea/anaconda3/lib/python3.11/site-packages (from torcheval) (4.7.1)\n",
+      "Downloading torcheval-0.0.7-py3-none-any.whl (179 kB)\n",
+      "\u001b[2K   \u001b[38;2;114;156;31m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m179.2/179.2 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hInstalling collected packages: torcheval\n",
+      "Successfully installed torcheval-0.0.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install torcheval"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": []
